fix thermometre margin on mobile

--- a/public/assets/stylesheets/buttons.scss
+++ b/public/assets/stylesheets/buttons.scss
@@ -62,9 +62,8 @@
 .icon-button {
   align-items: center;
   justify-content: center;
-  width: 46px;
-  height: 46px;
   border-radius: 4px;
+  padding: 0.5rem;
 
   &.white {
     color: #171923;
