--- a/src/Components/Thermometer/Thermometer.scss
+++ b/src/Components/Thermometer/Thermometer.scss
@@ -95,7 +95,7 @@ $bottomRoundSize: 30px;
       z-index: 1;
       border-radius: 30px;
       padding-bottom: $bottomRoundSize;
-      margin-bottom: 28px;
+      bottom: 28px;
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
 
